# LLMQ-Horizon

./: Dockerfile  docker-compose.yaml  pyproject.toml
data/knowledge_base/: sgu_guide.md
plugins/llm_chat/: __init__.py  callbacks.py  config.py  core_tools.py  graph.py  skills.py  tools.py  utils.py
