[project]
name = "llmq-horizon"
version = "0.1.1"
description = "A QQ Chatbot based on NoneBot2 and LangGraph."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.10",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.0",
    "pytz>=2024.2",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "pyquery>=2.0.1",
    "langchain-google-genai>=2.0.6",
    "fal-client>=0.5.6",
    "sxtwl>=2.0.7",
    "langchain-anthropic>=0.3.1",
    "langchain-groq>=0.2.2",
    "langchain-xai>=0.2.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "yt-dlp>=2024.12.23",
    "resend>=2.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-protobuf>=6.32.1.20251210",
    "types-requests>=2.32.4.20260107",
    "types-setuptools>=80.9.0.20251223",
]
